hphp/test/zend/bad/ext/mysqli/tests/mysqli_stmt_result_metadata_sqltests.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

die("skip Check again when the Klingons visit earth - http://bugs.mysql.com/bug.php?id=42490");
?>